--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
-html {
+body, html {
   background-color: #ffffff;
+  height: 100%;
 }
 
 .header {
@@ -8,6 +9,11 @@ html {
   width: 100%;
   position: absolute;
   top: 0;
+}
+
+#holder{
+    min-height: 100%;
+    position: relative;
 }
 
 #main {
@@ -31,6 +37,11 @@ html {
   font-family: Raleway;
 }
 
+#textbox {
+  height: 100%;
+  overflow: auto;
+}
+
 p.menubutton {
   padding-top: 8px;
   padding-bottom: 8px;
@@ -43,12 +54,14 @@ p.menubutton {
   top: 169px;
 }
 
-.footertable {
+.footer {
   width: 100%;
+  height: 30px;
   background-color: #3e475f;
   color: #ffffff;
   position: absolute;
-  bottom: 0;
+  bottom: 0px;
+  left: 0px;
   font-family: Raleway;
 }
 
